searchpage: fixed some padding on smaller screens

--- a/sass/pages/experiences/search.scss
+++ b/sass/pages/experiences/search.scss
@@ -91,6 +91,7 @@
 .top-field {
   @include media('<desktop') {
     margin-bottom: 15px;
+    padding-right: 0;
   }
 }
 
@@ -153,6 +154,7 @@
     }
     @include media('<tablet') {
       text-align: center;
+      padding: 0;
     }
   }
 }
